# Viatora

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  buf.gen.yaml  docker-compose.yml  eslint.config.js  lint-staged.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
services/auth-service/: .env.example  README.md  config.py  database.py  dev.py  di.py  fix_grpc_imports.py  grpc_server.py  main.py  pyproject.toml
services/auth-service/domain/: get_me_dto.py  handle_oauth_callback_dto.py  initiate_oauth_dto.py  logout_dto.py  refresh_token_dto.py  user_dto.py  validate_token_dto.py
services/auth-service/exceptions/: unuathenticated_exception.py
services/auth-service/grpc_server/: auth_servicer.py  test_auth_servicer.py
services/auth-service/interceptors/: service_key_interceptor.py
services/auth-service/models/: user.py
services/auth-service/repositories/: refresh_token_repository.py  user_repository.py
services/auth-service/services/: auth_service.py  google_oauth.py  google_oauth_service.py  test_auth_service.py  test_google_oauth_service.py  test_token_service.py  test_user_service.py  token_service.py  user_service.py
services/auth-service/utils/: convert_datetimes_to_ints.py  test_utils.py  user_to_proto.py  validate_request.py
services/statistics-service/: .env.example  dev.py  fix_grpc_imports.py  main.py  producer.py  pyproject.toml
services/statistics-service/features/exams/: exam_consumer.py  exam_result_repository.py  exam_service.py  (+3 more)
services/statistics-service/interceptors/: test_service_key_interceptor.py
services/statistics-service/utils/: async_kafka_consumer.py  config.py  decorators.py  di.py  settings.py
(+393 files in other folders)
